added a maps.js page for the js code for the map

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,3 +34,8 @@
     background: rgba(0, 0, 0, 0.2);
     height: 120px;
 }
+
+/*--------------------------------------------Map*/
+div#map {
+    min-height: 360px;
+}
