added the code on the style.css, map.js and index page to render the map through googles API on the page ina sperate div.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,10 @@
     height: 120px;
 }
 
-/*--------------------------------------------Map*/
-div#map {
-    min-height: 360px;
+
+/*--------------------------------------------map.css*/
+/* Always set the map height explicitly to define the size of the div
+ * element that contains the map. */
+#map {
+  height: 100%;
 }
