--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,17 +39,11 @@
 /*--------------------------------------------map.css*/
 /* Always set the map height explicitly to define the size of the div
  * element that contains the map. */
-div#map {
+#map {
     min-height: 360px;
 
 }
-/* Optional: Makes the sample page fill the window. */
 
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
 #description {
   font-family: Roboto;
   font-size: 15px;
@@ -120,3 +114,4 @@ html, body {
 #target {
   width: 345px;
 }
+
