--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,19 @@
 /* Nav bar */
 
+/* Style the navbar */
+
 #navbar {
   overflow: hidden;
   background-color: #333;
+  z-index: 2;
 }
+
+/* Navbar links */
 
 #navbar a {
   float: left;
   display: block;
-  color: #DCDCDC;
+  color: #f2f2f2;
   text-align: center;
   padding: 14px;
   text-decoration: none;
@@ -20,11 +25,15 @@
   padding: 16px;
 }
 
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+
 .sticky {
   position: fixed;
   top: 0;
   width: 100%;
 }
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
 
 .sticky+.content {
   padding-top: 60px;
@@ -119,21 +128,21 @@
 
 }
 
-#resultsTable {
+/* table  */
+
+table,
+td,
+th {
+  border: 1px solid black;
+}
+
+table {
   border-collapse: collapse;
-  width: 240px;
+  width: 100%;
 }
-#rating {
-  font-size: 13px;
-  font-family: Arial Unicode MS;
-}
-.iw_table_row {
-  height: 18px;
-}
-.iw_attribute_name {
-  font-weight: bold;
-  text-align: right;
-}
-.iw_table_icon {
-  text-align: right;
+
+th {
+  height: 50px;
+
+
 }
