fixed table functionality as was not displaying results for the attractions search, added a new font from google fonts and applied to main section of website, worked on responsiveness to ensure all devices display properly, used CSS to style website a little further and ttry to ensure layout is user friendly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower&display=swap:100,200,300,400,500,600,700');
+
 /* Nav bar */
 
 /* Style the navbar */
@@ -19,11 +21,6 @@
   text-decoration: none;
 }
 
-/* Page content */
-
-.content {
-  padding: 16px;
-}
 
 /* The sticky class is added to the navbar with JS when it reaches its scroll position */
 
@@ -53,7 +50,7 @@
  * element that contains the map. */
 
 #map {
-  min-height: 360px;
+  min-height: 500px;
 
 }
 
@@ -82,7 +79,7 @@
   margin-left: 12px;
   padding: 0 11px 0 13px;
   text-overflow: ellipsis;
-  width: 400px;
+  width: 90%;
 }
 
 #pac-input:focus {
@@ -98,10 +95,15 @@
 }
 
 
-/* page css*/
+/* Page content */
 
-.main-section-column {
+.content {
+  padding: 16px;
+}
+
+.section-column {
   background-color: #D5DBE5;
+  
 }
 
 .footer {
@@ -118,7 +120,6 @@
 
 }
 
-
 /* search bar row*/
 
 .search-bar {
@@ -129,6 +130,11 @@
 }
 
 /* table  */
+
+#listing {
+  margin-top: 50px;
+}
+
 
 table,
 td,
@@ -146,6 +152,38 @@ th {
 
 }
 
+
+
 #search {
   margin-top: 30px;
+  font-family: Indie Flower, cursive;
+  font-size: 70px;
+  text-align: center;
+
 }
+
+.sub-heading {
+  font-family: Indie Flower, cursive;
+  margin-left: 12px;
+}
+
+.checkboxes {
+
+  font-family: Indie Flower, cursive;
+  margin-left: 12px;
+
+}
+
+/*--------------------------------------------Media Queries*/
+
+@media(min-width: 992px) {
+    /*.checkboxes{*/
+    /*    padding: 0 30px 30px;*/
+    /*    float: none;*/
+    /*    display: table-cell;*/
+    /*    width: 100%*/
+    /*}*/
+
+   
+}
+
