--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@
 
 #map {
   min-height: 500px;
-
+margin-top: 25px;
 }
 
 #description {
@@ -97,10 +97,6 @@
 
 /* Page content */
 
-.content {
-  padding: 16px;
-}
-
 .section-column {
   background-color: #D5DBE5;
   
@@ -117,7 +113,8 @@
 .checkboxes {
   padding-bottom: 25px;
   padding-top: 25px;
-
+font-size: 20px;
+text-align: center;
 }
 
 /* search bar row*/
@@ -173,7 +170,11 @@ th {
   margin-left: 12px;
 
 }
-
+.search_section{
+  border-style: solid;
+  border-width: 5px;
+  
+}
 /*--------------------------------------------Media Queries*/
 
 @media(min-width: 992px) {
