--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@
 
 #map {
   min-height: 500px;
-margin-top: 25px;
+  margin-top: 25px;
 }
 
 #description {
@@ -76,10 +76,11 @@ margin-top: 25px;
   font-family: Roboto;
   font-size: 15px;
   font-weight: 300;
-  margin-left: 12px;
+  
   padding: 0 11px 0 13px;
   text-overflow: ellipsis;
   width: 90%;
+  text-align: center;
 }
 
 #pac-input:focus {
@@ -99,7 +100,7 @@ margin-top: 25px;
 
 .section-column {
   background-color: #D5DBE5;
-  
+
 }
 
 .footer {
@@ -113,8 +114,8 @@ margin-top: 25px;
 .checkboxes {
   padding-bottom: 25px;
   padding-top: 25px;
-font-size: 20px;
-text-align: center;
+  font-size: 20px;
+  text-align: center;
 }
 
 /* search bar row*/
@@ -122,6 +123,7 @@ text-align: center;
 .search-bar {
   padding-bottom: 10px;
   padding-top: 10px;
+  text-align: center;
 
 
 }
@@ -130,6 +132,7 @@ text-align: center;
 
 #listing {
   margin-top: 50px;
+  
 }
 
 
@@ -137,11 +140,14 @@ table,
 td,
 th {
   border: 1px solid black;
+  background-color: #E5EDF9;
+  margin-bottom: 30px;
 }
 
 table {
   border-collapse: collapse;
   width: 100%;
+  text-align: center;
 }
 
 th {
@@ -152,7 +158,8 @@ th {
 
 
 #search {
-  margin-top: 30px;
+  margin-top: 40px;
+  margin-bottom: 25px;
   font-family: Indie Flower, cursive;
   font-size: 70px;
   text-align: center;
@@ -161,30 +168,26 @@ th {
 
 .sub-heading {
   font-family: Indie Flower, cursive;
-  margin-left: 12px;
+  text-align: center;
+
 }
 
 .checkboxes {
 
   font-family: Indie Flower, cursive;
-  margin-left: 12px;
+  /*margin-left: 12px;*/
 
 }
-.search_section{
+
+.search_section {
   border-style: solid;
   border-width: 5px;
-  
+  background-color: #E5EDF9;
+
 }
+
 /*--------------------------------------------Media Queries*/
 
 @media(min-width: 992px) {
-    /*.checkboxes{*/
-    /*    padding: 0 30px 30px;*/
-    /*    float: none;*/
-    /*    display: table-cell;*/
-    /*    width: 100%*/
-    /*}*/
 
-   
 }
-
