--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,10 +17,10 @@
   display: block;
   color: #f2f2f2;
   text-align: center;
- padding-left: 10px;
- padding-right: 10px;
- padding-bottom: 2px;
- padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 2px;
+  padding-top: 10px;
   text-decoration: none;
   margin-left: 10px;
 }
@@ -61,7 +61,7 @@
   font-family: Roboto;
   font-size: 15px;
   font-weight: 300;
-  
+
   padding: 0 11px 0 13px;
   text-overflow: ellipsis;
   width: 90%;
@@ -121,7 +121,7 @@
 
 #listing {
   margin-top: 50px;
- 
+
 }
 
 
@@ -158,6 +158,4 @@ th {
 
 /*--------------------------------------------Media Queries*/
 
-@media(min-width: 992px) {
-
-}
+@media(min-width: 992px) {}
